                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 01-03-2005 fixed: flashing screen when viewing pictures
  - 28-02-2005 changed: some gui rendering optimization
  - 28-02-2005 added: More DirectX exports for screensavers, thanks to SiW + MrC
  - 28-02-2005 fixed: Kai window showed incorrect image in Friends view.
  - 28-02-2005 fixed: Possible crash bug when dialog in Fullscreen video is closed.
  - 28-02-2005 fixed: 100k or so memleak in Settings screens.
  - 27-02-2005 fixed: switching between list/thumbs/bigthumbs in Music->Nav root window (& corrected date for the last few items added today to this changelog!)
  - 27-02-2005 change: Use alternate mplayer location now means old mplayer.dll location, and not setting it means new mplayer.dll
                       Remember to verify your settings to make sure you are using the proper dll (ie for most disable Use alternate mplayer location)
  - 27-02-2005 update: mplayer.dll to current cvs version. (final flac fix + realvideo 10 fix)
  - 27-02-2005 fixed: progbar/subtitles display chopped of when starting a new movie while one is already running
  - 27-02-2005 removed: YUY2 Overlays and LQ Pixel shader render modes have been removed.  Combo renderer has been renamed to "Hardware Overlays" and MQ Pixel shader is now LQ pixel shader.  Default is Combo renderer which is the best all-round.
  - 27-02-2005 added: IMDb scraping moved into system/HTMLScraper.dll.  You must have this in order for IMDb lookups to function!
  - 27-02-2005 added: Source for IMDb scraping dll + a windows test application (useful in it's own right). See Tools\HTMLScraper\IMDbLookup.