@@ -523,6 +523,7 @@
   <string><id>758</id><value>Removing Program Link</value></string>  
   <string><id>998</id><value>XLink Kai</value></string>
   <string><id>999</id><value>Online Gaming</value></string>
+  <string><id>1000</id><value>Screensaver Preview</value></string>
 
   <string><id>1396</id><value>Drifting</value></string>
   <string><id>1397</id><value>and</value></string>
