@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 01-03-2005 added: Screensaver screenshot ability.
+  - 01-03-2005 fixed: Changed Karaoke default delay from 80 to -80 as per SF bug report [1101736].
+  - 01-03-2005 added: Patches [1153934] and [1153884] thanks to MrC.
   - 01-03-2005 fixed: flashing screen when viewing pictures
   - 28-02-2005 changed: some gui rendering optimization
   - 28-02-2005 added: More DirectX exports for screensavers, thanks to SiW + MrC
